# exif_photo_qml

./: CMakeLists.txt  ErrorToolTip.qml  ExifMap.qml  PhotoDetailPopup.qml  Theme.qml  exifmodel.cpp  exifmodel.h  exifutils.cpp  exifutils.h  main.cpp  main.qml
